# classic-components

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  python-package.yml
sources/classic/components/: __init__.py  annotation_from_methods.py  auto_init.py  builder.py  component.py  components.py  constructor.py  context_managers.py  dataclass_field_aliases.py  decorators.py  doublewrap.py  extra_annotations.py  public_methods.py  registries.py  registry.py  types.py  utils.py
sources/classic/components/stages/: __init__.py  annotation_from_methods.py  constructor.py  public_methods.py  registration.py
tests/: test_auto_init.py  test_component.py  test_context_managers.py  test_dataclass_field_aliases.py  test_decorators.py  test_extra_annotations.py  test_methods.py  test_public_methods.py  test_registries.py
