[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "classic-components"
version = "1.3.2"
authors = [
    {name = "Sergey Variasov", email = "variasov@gmail.com"},
]
description = "Provides utilities for creating components"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/variasov/classic-components"

[project.optional-dependencies]
dev = [
    "build~=1.2.2.post1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "twine~=4.0",
]

[tool.setuptools.packages.find]
where = ["sources"]
namespaces = true
